# Robot-MiniPC

./: .gitignore  README.md  install.sh  pyproject.toml  run.sh
config/: robot_config.yaml
install/: local_setup.sh  setup.sh
install/robot_autonomous/local/lib/python3.10/dist-packages/robot_autonomous/: __init__.py  gps_driver_node.py  imu_driver_node.py  robot_controller_node.py
install/robot_autonomous/local/lib/python3.10/dist-packages/robot_autonomous-1.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
install/robot_autonomous/share/ament_index/resource_index/package_run_dependencies/: robot_autonomous
install/robot_autonomous/share/ament_index/resource_index/parent_prefix_path/: robot_autonomous
install/robot_autonomous/share/robot_autonomous/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_autonomous/share/robot_autonomous/cmake/: robot_autonomousConfig-version.cmake  robot_autonomousConfig.cmake
install/robot_autonomous/share/robot_autonomous/config/: ekf_config.yaml  nav2_params.yaml
install/robot_autonomous/share/robot_autonomous/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/robot_autonomous/share/robot_autonomous/launch/: autonomous_robot.launch.py
log/: latest_build
robotwin/: __init__.py  cli.py
robotwin/communication/: __init__.py  ros_bridge.py  websocket_client.py
robotwin/control/: __init__.py  controller.py  filters.py  motion.py  pid.py
robotwin/core/: __init__.py  robot.py
robotwin/hardware/: __init__.py  gpio.py  motors.py  sensors.py
robotwin/kinematics/: __init__.py  ackermann.py  differential.py  mecanum.py  odometry.py  omni.py
robotwin/utils/: __init__.py  config.py
ros2_packages/embedded_bridge/: CMakeLists.txt  README.md  package.xml
ros2_packages/embedded_bridge/config/: embedded_bridge.yaml
ros2_packages/embedded_bridge/launch/: embedded_bridge.launch.py
ros2_packages/embedded_bridge/src/: embedded_bridge_node.cpp
ros2_ws/: FINAL_TEST_REPORT.txt  INTEGRATION_COMPLETE.md  QUICK_START.md  README.md  SETUP_SUMMARY.md  TEST_RESULTS.md  test_all_nodes.sh  test_individual_nodes.sh
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/robot_example/share/robot_example/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/robot_example/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/robot_example/robot_example/: __init__.py  talker.py
ros2_ws/src/robot_example/robot_example/communication/: websocket_client.py
ros2_ws/src/robot_example/robot_example/control/: filters.py
ros2_ws/src/robot_example/robot_example/core/: __init__.py  state.py
ros2_ws/src/robot_example/robot_example/hardware/: gpio.py
ros2_ws/src/robot_example/robot_example/kinematics/: __init__.py  ackermann.py  base.py  differential.py  mecanum.py  omni.py
ros2_ws/src/robot_example/test/: test_robot_example.py
src/robot_autonomous/: CMakeLists.txt
src/robot_autonomous/config/: ekf_config.yaml  nav2_params.yaml
src/robot_autonomous/launch/: autonomous_robot.launch.py
src/robot_autonomous/resource/: robot_autonomous
src/robot_autonomous/robot_autonomous/: __init__.py  gps_driver_node.py  imu_driver_node.py  robot_controller_node.py
